--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -15,3 +15,6 @@
 @import 'components/forms';
 @import 'components/nav';
 @import 'components/tables';
+
+@import 'custom/custom';
+@import 'custom/canvas';
