--- a/assets/scss/components/_tables.scss
+++ b/assets/scss/components/_tables.scss
@@ -5,19 +5,25 @@
  */
 
 table {
-  width: 100%;
-  padding: 0;
-  text-align: left;
-  border-collapse: separate;
-  th, td {
-    padding: 10px;
-    vertical-align: middle;
-    border-bottom: 1px solid #ddd;
-  }
-  th {
-    font-weight: bold;
-    border-bottom-width: 2px;
-  }
+    width: 100%;
+    padding: 0;
+    text-align: left;
+    border-collapse: separate;
+    th, td {
+        padding: 10px;
+        vertical-align: middle;
+        border-bottom: 1px solid #ddd;
+    }
+    th {
+        font-weight: bold;
+        border-bottom-width: 2px;
+    }
+    tr {
+        td{
+
+        }
+    }
+
 }
 
 
@@ -25,9 +31,9 @@ table {
 // --------------
 
 table.striped {
-  tbody {
-    tr:nth-child(odd) td {
-      background-color: #f9f9f9;
+    tbody {
+        tr:nth-child(odd) td {
+            background-color: #f9f9f9;
+        }
     }
-  }
 }
