--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -2,7 +2,9 @@
 
 // Essentials
 @import 'base/base';
+@import 'base/var';
 @import 'grid/grid';
+
 
 // Typography
 @import 'typography/links';
@@ -15,6 +17,9 @@
 @import 'components/forms';
 @import 'components/nav';
 @import 'components/tables';
+@import 'components/dropdown';
 
 @import 'custom/custom';
 @import 'custom/canvas';
+@import 'custom/dashboard';
+
