--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -761,18 +761,31 @@ nav {
 table {
   width: 100%;
   padding: 0;
-  text-align: left;
-  border-collapse: separate; }
+  text-align: left; }
   table th, table td {
     padding: 10px;
     vertical-align: middle;
     border-bottom: 1px solid #ddd; }
   table th {
-    font-weight: bold;
-    border-bottom-width: 2px; }
+    font-weight: bold; }
 
 table.striped tbody tr:nth-child(odd) td {
   background-color: #f9f9f9; }
+
+.dropdown ul {
+  display: none; }
+.dropdown ul.active {
+  display: block;
+  position: absolute;
+  top: 52px;
+  left: 0px;
+  width: 103px; }
+  .dropdown ul.active li {
+    line-height: 32px;
+    background-color: #2ecc71;
+    border-bottom: solid 1px #fff; }
+    .dropdown ul.active li a {
+      color: #FFF; }
 
 /*
 To change this license header, choose License Headers in Project Properties.
@@ -787,22 +800,64 @@ and open the template in the editor.
   position: relative;
   display: block;
   float: left;
-  margin-top: 8px;
+  margin-top: 60px;
   width: 1024px; }
 
 .canvas {
   position: relative;
-  z-index: 9; }
+  border: solid 1px black; }
+  .canvas .area {
+    border: solid 1px black; }
   .canvas table {
-    border-collapse: separate;
-    border-spacing: 2px;
     border-color: gray; }
-  .canvas Inherited from body.canvas.show.with-canvas.updateable-canvas
-  .content-container,
-  .canvas table.canvas td.area,
-  .canvas .snapshots .content-container table.canvas td.area, .canvas .risks .content-container table.canvas td.area, .canvas .canvas.wizard .content-container table.canvas td.area, .canvas .experiments .content-container table.canvas td.area {
-    vertical-align: top;
-    border: 2px solid #000;
-    background-color: #fff; }
+    .canvas table tbody .canvas-cell canvas-cell-main {
+      position: relative;
+      width: 100%;
+      padding: 5px 0 0px 4px; }
   .canvas .area-title {
     color: #222; }
+
+#dashboard {
+  margin-top: 55px;
+  margin-left: auto;
+  margin-right: auto;
+  min-height: 600px;
+  min-width: 800px;
+  height: auto;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border: solid 1px #ddd;
+  background-color: #fff;
+  padding: 30px 20px;
+  color: black;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px; }
+  #dashboard #projectlist ul li {
+    float: left;
+    margin-top: 1em;
+    margin-right: 30px;
+    border: solid 1px #EAEAEA;
+    background-color: #F7F7F7;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px; }
+    #dashboard #projectlist ul li a {
+      padding: 12px 20px;
+      display: block;
+      width: 240px;
+      height: 180px; }
+    #dashboard #projectlist ul li a:hover {
+      color: #99f;
+      background-color: #eff3fd; }
