--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -457,7 +457,8 @@ ul {
   clear: both; }
 
 .fixed {
-  position: fixed; }
+  position: fixed;
+  z-index: 99; }
 
 /* Grid
  * -------------------------------------------
@@ -739,6 +740,7 @@ input[type="submit"], input[type="reset"] {
   border: 1px solid #ccc; }
 
 nav {
+  z-index: 9999;
   background-color: #1abc9c; }
   nav ul {
     text-align: center;
@@ -764,8 +766,7 @@ table {
   text-align: left; }
   table th, table td {
     padding: 10px;
-    vertical-align: middle;
-    border-bottom: 1px solid #ddd; }
+    vertical-align: middle; }
   table th {
     font-weight: bold; }
 
@@ -777,12 +778,14 @@ table.striped tbody tr:nth-child(odd) td {
 .dropdown ul.active {
   display: block;
   position: absolute;
-  top: 52px;
+  top: 54px;
   left: 0px;
-  width: 103px; }
+  z-index: 98;
+  width: 112px; }
   .dropdown ul.active li {
     line-height: 32px;
-    background-color: #2ecc71;
+    text-align: center;
+    background-color: #34495e;
     border-bottom: solid 1px #fff; }
     .dropdown ul.active li a {
       color: #FFF; }
@@ -798,24 +801,37 @@ and open the template in the editor.
 */
 #canvas {
   position: relative;
-  display: block;
-  float: left;
-  margin-top: 60px;
-  width: 1024px; }
+  margin-top: 60px; }
 
 .canvas {
   position: relative;
   border: solid 1px black; }
   .canvas .area {
     border: solid 1px black; }
+  .canvas .short_help {
+    color: #ddd; }
+  .canvas .order {
+    color: #0099ff;
+    font-size: 5.0em;
+    text-align: center; }
+  .canvas .cell-container, .canvas .canvas-cell, .canvas .canvas-cell-main {
+    height: 100%;
+    width: 100%;
+    margin-bottom: 0;
+    vertical-align: top;
+    background-color: #fff;
+    position: relative;
+    width: 100%;
+    padding: 5px 0 0px 4px; }
   .canvas table {
     border-color: gray; }
-    .canvas table tbody .canvas-cell canvas-cell-main {
-      position: relative;
-      width: 100%;
-      padding: 5px 0 0px 4px; }
   .canvas .area-title {
-    color: #222; }
+    color: #222;
+    font-size: 0.7em; }
+  .canvas .help {
+    position: absolute;
+    top: 0px;
+    right: 4px; }
 
 #dashboard {
   margin-top: 55px;
