--- a/assets/scss/components/_dropdown.scss
+++ b/assets/scss/components/_dropdown.scss
@@ -9,13 +9,14 @@
     ul.active{
         display:block;
         position: absolute;
-        top: 52px;
+        top: 54px;
         left: 0px;
-        
-        width: 103px;
+        z-index: 98;
+        width: 112px;
         li{
             line-height: 32px;
-            background-color: $green;
+            text-align: center;
+            background-color: $wetasphalt;
             border-bottom: solid 1px #fff;
             a{
                 color: #FFF;
