1. 改fancybox为jqueryUI 2. 添加serializeObject for form 3. 安装knockOut插件（chrome可以查看相关的调试信息） 4. 实现前端添加项目的功能

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -879,3 +879,13 @@ and open the template in the editor.
     #dashboard #projectlist ul li a:hover {
       color: #99f;
       background-color: #eff3fd; }
+
+.dialog {
+  border: 2px solid black;
+  background-color: papayawhip;
+  color: red;
+  padding: 5px; }
+
+.open-btn, .close-btn {
+  border: 1px solid black;
+  cursor: pointer; }
