--- a/views/layout.html
+++ b/views/layout.html
@@ -5,15 +5,21 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
 {%block head%}
-<link rel="stylesheet" type="text/css" href="/css/all.css">
-<!--<script src="/socket.io/socket.io.js"></script>-->
+<link rel="stylesheet" type="text/css" href="/css/all.css" />
+<!--<link rel="stylesheet" type="text/css" href="/fancybox/jquery.fancybox-1.3.4.css" />-->
+<link rel="stylesheet" type="text/css" href="/css/ui-lightness/jquery-ui-1.10.3.custom.css" />
+<script src="/js/jquery-1.7.2.js"></script>
+<script src="/js/jquery.serializeObject.js"></script>
+<script src="/js/jquery-ui-1.10.3.custom.js"></script>
+<!--<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>-->
+<script src="/js/knockout-3.0.0.js"></script>
 {%endblock%}
 </head>
 <body>
 {% block header %}
 	<div id="header" class="container-full fixed">
 		<nav>
-			<ul>
+                    <ul>
 				<li><a href="/">首页</a></li>
 				<li><a href="/project">项目列表</a></li>
 				<li><a href="/canvas">商业画布</a></li>
